# fast_api_lecture

./: .gitignore  main.py  pyproject.toml  run.sh
doc/: 1.Hello_World.md  10.Cookies.md  11.Form_Data.md  12.CORS.md  13.Auth.md  14.File.md  15.Test.md  16.Middleware.md  17.Background_Task.md  18.WebSockets.md  19.Dependencies.md  2.Get_Method.md  3.Operation_Description.md  4. Routers.md  5. Parameters.md  6. Database_Sqlalchemy.md  6.2. Database_Select_Update_Delete copy.md  6.3. Database_Relationship.md  7.Error_Handling.md  9.Headers.md
src/: main.py  schemas.py
src/auth/: authentication.py  oauth2.py
src/db/: database.py  db_article.py  db_user.py  hash.py  models.py
src/routers/: article.py  blog_get.py  blog_post.py  file.py  product.py  user.py
test/: test_main.py
