[project]
name = "fast-api-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "aiofiles>=24.1.0",
    "bcrypt==4.0.1",
    "fastapi>=0.116.2",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
